# funplayer

./: .gitignore  README.md  deploy.py  funplayer.toml
funplayer/: .npmignore  LICENSE  README.md  package-lock.json  package.json  test-embed.html  test-vercel.html  tsconfig.json  vite.config.embed.js  vite.config.js
funplayer/dist-embed/: funplayer-embed.js
funplayer/src/: embed.js  index.jsx
streamlit_funplayer/: funplayer.py  pyproject.toml
streamlit_funplayer/streamlit_funplayer/: __init__.py
streamlit_funplayer/streamlit_funplayer/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
streamlit_funplayer/streamlit_funplayer/frontend/src/: StreamlitFunPlayer.jsx
