[build-system]
requires = [ "setuptools>=45", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-funplayer"
version = "0.1.37"
description = "Streamlit wrapper for funplayer-react component for synchronized media and haptic playback"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [ "streamlit>=1.45.0",]
[[project.authors]]
name = "Baptiste Ferrand"
email = "bferrand.math@gmail.com"

[project.license]
text = "CC-BY-NC-SA-4.0"

[project.urls]
Homepage = "https://github.com/B4PT0R/funplayer"
Repository = "https://github.com/B4PT0R/funplayer"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
streamlit_funplayer = [ "frontend/build/**/*",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "streamlit_funplayer*",]
